After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762882 - Don't show health ratings for add-ons, don't show user reviews for codecs or languages
Don't show health ratings for add-ons, don't show user reviews for codecs or ...
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
3.19.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-02-29 17:52 UTC by Allan Day
Modified: 2016-02-29 18:37 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Allan Day 2016-02-29 17:52:25 UTC
It doesn't make sense to show a health rating for add-ons: most of the criteria don't apply to them.

User reviews are a little trickier. They probably are useful and interesting for things like fonts or input methods, where users have a choice about which ones to install and use. It is less clear whether they are relevant for codecs or languages though.
Comment 1 Richard Hughes 2016-02-29 18:37:49 UTC
commit be8ddb4c69bc6cd6d1522d18ee6d858344808a7a
Author: Richard Hughes <richard@hughsie.com>
Date:   Mon Feb 29 18:14:07 2016 +0000

    Do not show ratings and reviews for some component kinds
    
    Fixes half of https://bugzilla.gnome.org/show_bug.cgi?id=762882

:100644 100644 80a8779... dcbbd5d... M  src/gs-shell-details.c

commit 184eeecc85cbd50c39bc888f3a60d173f19f7239
Author: Richard Hughes <richard@hughsie.com>
Date:   Mon Feb 29 18:34:24 2016 +0000

    Hide the kudo details panel for non desktop components
    
    Fixes the other half of: https://bugzilla.gnome.org/show_bug.cgi?id=762882

:100644 100644 dcbbd5d... 3990b5e... M  src/gs-shell-details.c