Do not show ratings and reviews for some component kinds

Fixes half of https://bugzilla.gnome.org/show_bug.cgi?id=762882